--- a/css/main.css
+++ b/css/main.css
@@ -2,150 +2,73 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
+
 }
 
-@font-face
-{
-	font-family: Roboto;
-	src: url(C:/Users/User/Desktop/Module3/fonts/Roboto-Regular.ttf);
+
+
+body{
+	background-color:	#efefef ;
 }
 
-html, body, main{
-	height: 100%;
-	font-family: Roboto;
-}
 
-.first{
-	height: 100%;
-	background-image: url(C:/Users/User/Desktop/Module3/img/img1.jpg);
-	background-position: center;
-	-webrit-background-size: cover;
-	background-size: cover;
-}
-
-.first p{
-	color: white;
-}
-
-.tourismus{
-	width: 100%;
-	text-align: center;
-	padding-top: 80px;
-	font-size: 20px;
-}
-
-.text-container{
-	width: 40%;
-	margin-left: 15%;
-	margin-top: 15%;
-}
-
-.first-line{
-	text-transform: uppercase;
-	font-size: 26px;
-	font-weight: bold;
-	letter-spacing: 1px;
-	opacity: 0.5;
-	line-height: 1;
-}
-
-.second-line{
-	text-transform: uppercase;
-	font-size: 64px;
-	font-weight: bold;
-	line-height: 1;
-	letter-spacing: 5px;
-}
-
-.third-line{
-	font-size: 20px;
-}
-
-.second{
-	width: 100%;
+main{
+	width: 80%;
+	padding: 60px; /*Внешние*/
+	margin: auto; /*Внутренние*/
+	background-color: #FFFFFF;
 	display: flex;
-	justify-content: center ;
-	-ms-align-items: center;
-	align-items:center ;
-}
-
-.gallery-container{
-	width: 60%;
-	max-width: 1000px;
-}
-
-.img-container{
-	width: 100%;
-	display: flex;
-	-ms-align-items: center;
-	align-items:center ;
-}
-
-img{
-	display: block;
-	max-width: 100%;
-	height: auto;
-	box-shadow: 0 0 10px 1px rgba(0, 0, 0,.3);
-}
-
-
-
-.img1{
-	width: 55%;
-}
-.wrapper{
-	margin-left: 20px;
-}
-.img2{
-	margin-bottom: 20px;
-}
-
-.gallery-text{
-	display: flex;
-	justify-content: space-between;
-	-ms-align-items: center;
-	align-items:center;
-	margin-bottom: 20px;
-}
-
-.gallery-header{
-	font-size: 48px;
-	font-weight: bold;
-	letter-spacing: 2px;
-	line-height: 1;
-}
-
-.gallery-p{
-	font-size: 18px;
-}
-
-.last-container {
-	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
-	-ms-align-items: center;
-	align-items: center;
-	flex-direction: column;
-	height: 300px;
-	padding: 0 25%;
-	background-image: url(../img/img3.jpg);
-	background-position: center;
-	-webkit-background-size: cover;
+	box-shadow: 0 0 10px 1px rgba(0,0,0,0.2);
+
+}
+
+.photo {
+	width: calc(50% - 40px);
+	height: calc((35vw - 40px) / 16 * 9);
+	margin: 20px; /*Внутренние*/
+	background-color: orange;
+	background-position: center ;
 	background-size: cover;
-	font-family: Roboto;
+	transition: all 0.5s ease;
 }
 
-.last-header {
-	color: white;
-	font-size: 20px;
-	padding: 10px 20px;
-	border: 1px solid white;
-	margin-bottom: 40px;
+.photo:hover {
+
+	transform: rotate(3deg) scale(1.07);
+	box-shadow: 0 0 10px 1px rgba(0,0,0,0.2);
 }
 
-.last-text {
-	color: white;
-	font-size: 16px;
+h1{
+	width: 100%;
 	text-align: center;
-	line-height: 1.5;
-	letter-spacing: 1px;
+	font-size: 48px;
 }
+
+.photo1 {
+	background-image: url(../img/img1.jpeg) ;
+}
+
+.photo2 {
+	background-image: url(C:/Users/User/Desktop/Gallery/img/img2.jpeg) ;
+}
+
+.photo3 {
+	background-image: url(C:/Users/User/Desktop/Gallery/img/img3.jpeg) ;
+}
+
+.photo4 {
+	background-image: url(C:/Users/User/Desktop/Gallery/img/img4.jpeg) ;
+}
+
+.photo5 {
+	background-image: url(C:/Users/User/Desktop/Gallery/img/img5.jpeg) ;
+}
+
+.photo6 {
+	background-image: url(C:/Users/User/Desktop/Gallery/img/img6.jpeg) ;
+}
+
+
+ 
